--- a/artists.html
+++ b/artists.html
@@ -4,12 +4,8 @@
     <meta charset="UTF-8" />
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>R&B Legends</title>
+    <title>About the Artists</title>
   </head>
-  <body>
-    <h1>R&B Legends</h1>
-    <a href="/albums.html">Albums</a>
-    <a href="/artists.html">About the Artists</a>
-    <a href="/accomplishments.html">Awards and Accomplishments</a>
-  </body>
+  <h1>About the Artists</h1>
+  <a href="/Server project.html">Back to homepage</a>
 </html>
