created a body tag for each folder

--- a/artists.html
+++ b/artists.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About the Artists</title>
   </head>
-  <h1>About the Artists</h1>
-  <a href="/Server project.html">Back to homepage</a>
+  <body>
+    <h1>About the Artists</h1>
+    <a href="/Server project.html">Back to homepage</a>
+  </body>
 </html>
