--- a/accomplishments.html
+++ b/accomplishments.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><a href="/Server project.html">Back to homepage</a></title>
   </head>
-  <h1>Awards and Accomplishments</h1>
-  <a href="/Server project.html">Back to homepage</a>
+  <body>
+    <h1>Awards and Accomplishments</h1>
+    <a href="/Server project.html">Back to homepage</a>
+  </body>
 </html>
