--- a/albums.html
+++ b/albums.html
@@ -5,7 +5,9 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Albums</title>
-    <h1>Albums</h1>
-    <a href="/Server project.html">Back to homepage</a>
+    <body>
+      <h1>Albums</h1>
+      <a href="/Server project.html">Back to homepage</a>
+    </body>
   </head>
 </html>
