--- a/accomplishments.html
+++ b/accomplishments.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><a href="/Server project.html">Back to homepage</a></title>
+    <title>Awards and Accomplishments</title>
   </head>
   <body>
     <h1>Awards and Accomplishments</h1>
