Fixed the links

--- a/Server project.html
+++ b/Server project.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <h1>R&B Legends</h1>
-    <a href="/albums.html">Albums</a>
-    <a href="/artists.html">About the Artists</a>
-    <a href="/accomplishments.html">Awards and Accomplishments</a>
+    <a href="albums.html">Albums</a>
+    <a href="artists.html">About the Artists</a>
+    <a href="accomplishments.html">Awards and Accomplishments</a>
   </body>
 </html>
