--- a/accomplishments.html
+++ b/accomplishments.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>Awards and Accomplishments</h1>
-    <a href="/Server project.html">Back to homepage</a>
+    <a href="Server project.html">Back to homepage</a>
   </body>
 </html>
