--- a/albums.html
+++ b/albums.html
@@ -7,7 +7,7 @@
     <title>Albums</title>
     <body>
       <h1>Albums</h1>
-      <a href="server.html">Back to homepage</a>
+      <a href="index.html">Back to homepage</a>
     </body>
   </head>
 </html>
