--- a/artists.html
+++ b/artists.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>About the Artists</h1>
-    <a href="server.html">Back to homepage</a>
+    <a href="index.html">Back to homepage</a>
   </body>
 </html>
