Worked on the homepage and the About the Artists page

--- a/accomplishments.html
+++ b/accomplishments.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <h1>Awards and Accomplishments</h1>
-    <a href="index.html">Back to homepage</a>
+    <h2>
+      <a href="index.html" class="a-link">Back to homepage</a>
+    </h2>
   </body>
 </html>
