--- a/artists.html
+++ b/artists.html
@@ -6,8 +6,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About the Artists</title>
   </head>
-  <body>
-    <h1>About the Artists</h1>
-    <a href="index.html">Back to homepage</a>
+  <body class="artist-1">
+    <h1 class="h1-artists">About the Artists</h1>
+    <h2>
+      <div class="container">
+        <img
+          src="https://meetinmontauk.files.wordpress.com/2018/02/her.jpg"
+          alt="Headshot of H.E.R."
+        />
+        <img
+          src="https://1.bp.blogspot.com/-IZ7E4wSX-90/Xt2ApTh4cQI/AAAAAAAAB1o/XCRxR4beiMIC84XwBEzEV4OmkKPu7AXNQCLcBGAsYHQ/s640/blog.jpg"
+          alt="Tems"
+        />
+        <img
+          src="https://coveteur.com/media-library/image.jpg?id=25297133&width=744&quality=90"
+          alt="Sza"
+        />
+      </div>
+      <div class="container-main">
+        <div class="artist-info">
+          <p>
+            H.E.R., born Gabriella Sarmiento Wilson on June 27, 1997, in
+            Vallejo, California, is a multi-talented individual renowned for her
+            contributions to the music industry. Formerly known as Gabi Wilson,
+            she transitioned to the stage name H.E.R., an acronym for "Having
+            Everything Revealed," embodying an enigmatic persona. Beyond her
+            musical prowess, H.E.R. is recognized for her authenticity and
+            empowerment in the entertainment landscape. Her journey, marked by
+            early recognition and a deliberate air of mystery, reflects her
+            commitment to personal expression and artistic innovation.
+          </p>
+        </div>
+        <div class="artist-info">
+          <p>
+            Temilade Openiyi, professionally known as Tems, is a Nigerian singer
+            and songwriter born and raised in Lagos. Born on June 11, 1995, Tems
+            has made a notable impact on the music scene with her soulful voice
+            and distinctive sound, fusing Afrobeat, R&B, and alternative
+            elements. Tems gained widespread recognition for her collaborations
+            with top artists and her solo works, captivating audiences with her
+            unique style and emotive storytelling. Her journey reflects a
+            commitment to self-expression and artistic innovation, establishing
+            her as a rising star in the Nigerian music industry.
+          </p>
+        </div>
+        <div class="artist-info">
+          <p>
+            Solána Imani Rowe, known by her stage name SZA, is an American
+            singer and songwriter. Born on November 8, 1989, in St. Louis,
+            Missouri, SZA's journey into the music industry is marked by a
+            fusion of soulful melodies, introspective lyrics, and a
+            genre-defying approach. Beyond her musical achievements, SZA stands
+            out as a multifaceted artist who brings a fresh perspective to the
+            industry, her ability to seamlessly blend various musical genres and
+            explore profound narratives has solidified her status as a
+            trailblazer in the evolving landscape of contemporary music.
+          </p>
+        </div>
+      </div>
+    </h2>
+    <a href="index.html" class="a-link">Back to homepage</a>
   </body>
 </html>
