worked on the albums page

--- a/accomplishments.html
+++ b/accomplishments.html
@@ -82,9 +82,17 @@
         Tems: An R&B and Afrobeat Luminary on the Global Stage
       </h2>
       <p class="p-awards">
-        Her impressive list of awards and achievements highlights a career on
-        the ascent, with one notable milestone being the coveted Grammy
-        recognition.
+        Tems has effortlessly woven a sonic tapestry that resonates with
+        authenticity and emotion. Her soul-stirring vocals, characterized by a
+        distinctive blend of vulnerability and strength, create an immersive
+        experience for listeners, inviting them into the evocative landscapes of
+        her artistry. Beyond the confines of conventional genres, Tems' music
+        transcends boundaries, forging a connection that goes beyond the
+        auditory senses, touching the very soul of those who embark on this
+        musical journey with her. In the ever-evolving landscape of contemporary
+        music, Tems stands as a beacon of innovation and artistic ingenuity,
+        poised to leave an indelible mark on the hearts and minds of music
+        enthusiasts worldwide.
       </p>
       <h3 class="h3-awards">Grammy Triumph with "Essence"</h3>
       <p class="p-awards">
@@ -136,14 +144,17 @@
         SZA: Acclaimed Contributions to the Music Industry
       </h2>
       <p class="p-awards">
-        SZA has garnered widespread acclaim and recognition for her exceptional
-        contributions to the music industry.
-      </p>
-      <p class="p-awards">
-        SZA, born Solána Imani Rowe, has carved a distinctive path in the world
-        of R&B, leaving an indelible mark with her soulful sound and
-        unparalleled artistry. Her list of accomplishments reads like a
-        testament to her unique contributions to the music industry.
+        With a genre-defying approach that seamlessly weaves elements of R&B,
+        soul, and alternative sounds, SZA crafts a musical universe that is both
+        intimate and expansive. Her voice, a captivating instrument of emotional
+        resonance, serves as a vessel for introspection and self-discovery.
+        SZA's sonic landscapes are rich with nuance, blending poignant lyricism
+        with melodies that linger in the soul. Beyond the confines of
+        traditional genres, she ventures into uncharted territories, pushing the
+        boundaries of what contemporary music can be. In the dynamic tapestry of
+        her discography, SZA emerges as a storyteller, inviting audiences to
+        explore the complexities of human emotion and experience through the
+        prism of her art.
       </p>
       <h3 class="h3-awards">Grammy-Nominated Debut</h3>
       <p class="p-awards">
