--- a/albums.html
+++ b/albums.html
@@ -7,9 +7,141 @@
     <title>Albums</title>
   </head>
   <body>
+    <a href="mailto:your.email@example.com" class="contact">Email us 📧</a>
     <h1>Albums</h1>
     <h2>
-      <a href="index.html" class="a-link">Back to homepage</a>
+      <div class="spotify-link">
+        <a
+          href="https://open.spotify.com/artist/3Y7RZ31TRPVadSFVy1o8os?si=cLrjHvwHTI-Ubhb4REN8VA"
+          target="_blank"
+        >
+          <img
+            src="https://i.scdn.co/image/ab6761610000e5eb7b05445e212ac49d9ed4c310"
+            alt="Spotify"
+          />
+        </a>
+
+        H.E.R.
+        <p>Number of albums: 3</p>
+        <p class="listeners">monthly listeners: 12,674,653</p>
+        <h3>
+          1. H.E.R., Volume 1 (EP) - Released: September 9, 2016 H.E.R.'s
+          musical odyssey began with the release of her first EP, "H.E.R.,
+          Volume 1." Introduced to the world under a veil of anonymity, she
+          immediately caught the attention of listeners with her soul-stirring
+          vocals and emotive storytelling. 2. H.E.R., Volume 2 (EP) - Released:
+          June 16, 2017 Continuing the narrative, "H.E.R., Volume 2" further
+          unveiled the layers of her artistry. The EP not only solidified her
+          unique sound but also left an indelible mark, resonating with those
+          who craved authenticity in music. 3. H.E.R., Volume 2 (The B Sides)
+          (EP) - Released: October 20, 2017 Adding a touch of unpredictability,
+          H.E.R. gifted fans with "The B Sides" EP, a collection of additional
+          gems. This release showcased her versatility and willingness to
+          explore different facets of her craft. 4. Back of My Mind (Studio
+          Album) - Released: June 18, 2021 The culmination of her journey so
+          far, "Back of My Mind" stands as a testament to H.E.R.'s growth and
+          maturity as an artist. The studio album seamlessly weaves together
+          elements of R&B, soul, and contemporary sounds, creating a tapestry of
+          musical brilliance. Each release from H.E.R. is a chapter in a
+          narrative that unfolds with every note and lyric. Her ability to
+          connect with listeners on a deep, emotional level has elevated her to
+          a position of influence within the music industry. Beyond the
+          accolades and awards, H.E.R.'s impact lies in the genuine, raw, and
+          authentic nature of her art. As we anticipate future chapters in her
+          musical story, one thing remains certain – H.E.R. will continue to
+          leave an enduring legacy, inspiring generations with her extraordinary
+          fusion of artistic ingenuity and a profound connection with her craft.
+        </h3>
+      </div>
+
+      <div class="spotify-link">
+        <a
+          href="https://open.spotify.com/artist/687cZJR45JO7jhk1LHIbgq?si=CDQIe1vaRHe6ictYixaKpA"
+          target="_blank"
+        >
+          <img
+            src="https://i.scdn.co/image/ab67616d00001e020ab4d3e1c0b5c5e453287a4c"
+            alt="Spotify"
+          />
+        </a>
+        Tems
+        <p>Number of albums: 1</p>
+        <p class="listeners">monthly listeners: 15,585,247</p>
+        <h3>
+          1. "For Broken Ears" (EP) - Released: September 2020 Tems burst onto
+          the music scene with her debut EP, "For Broken Ears." Released in
+          September 2020, this collection of tracks showcased her unique blend
+          of Afrobeat and R&B, leaving a lasting impression on listeners. The EP
+          served as a powerful introduction to Tems' soulful and introspective
+          style. 2. "Mr Rebel" (Single) "Mr Rebel" is one of Tems' early singles
+          that contributed to establishing her presence in the music landscape.
+          With its soulful sound and compelling lyrics, the track demonstrated
+          Tems' ability to create music that resonates with authenticity. 3.
+          "These Days" (Single) - Released: May 2020 Released in May 2020,
+          "These Days" is another standout single by Tems. The song received
+          positive reviews and further solidified her position as a promising
+          artist to watch. Tems' ability to infuse emotion into her music became
+          increasingly evident with each release. 4. Collaborations: "Essence"
+          with WizKid While not part of her solo discography, Tems gained
+          widespread recognition for her collaboration with WizKid on the track
+          "Essence." The song became a major success, reaching international
+          acclaim and showcasing Tems' versatility as an artist. Tems' musical
+          journey is characterized by a distinctive sound that effortlessly
+          blends genres and a lyrical depth that resonates with listeners. With
+          a voice that carries both vulnerability and strength, Tems has created
+          a space for herself in the ever-evolving landscape of contemporary
+          music. As we await future chapters in Tems' musical odyssey, it's
+          evident that her artistry will continue to evolve, leaving an
+          indelible mark on the hearts of those who appreciate music as a
+          powerful and emotive form of expression.
+        </h3>
+      </div>
+      <div class="spotify-link">
+        <a
+          href="https://open.spotify.com/artist/7tYKF4w9nC0nq9CsPZTHyP?si=dmJ3A3fnRQ6AYmecPQC8pA"
+          target="_blank"
+        >
+          <img
+            src="https://i.scdn.co/image/ab6761610000e5eb0895066d172e1f51f520bc65"
+            alt="Spotify"
+          />
+        </a>
+        Sza
+        <p>Number of albums: 3</p>
+        <p class="listeners">monthly listeners: 64,483,745</p>
+        <h3>
+          1. "See.SZA.Run" (EP) - Released: 2012 SZA's musical journey began
+          with the EP "See.SZA.Run," released in 2012. This early introduction
+          showcased her distinctive style, hinting at the depth of emotion and
+          creativity that would become synonymous with her name. 2. "Z" (EP) -
+          Released: 2014 In 2014, SZA unveiled the EP "Z," a project that marked
+          a more mature and developed sound. With tracks like "Babylon" and
+          "Child's Play," the EP demonstrated SZA's ability to navigate various
+          sonic landscapes, foreshadowing her future explorations in the realm
+          of R&B. 3. "Ctrl" (Studio Album) - Released: June 2017 A milestone in
+          SZA's career, "Ctrl" is her critically acclaimed debut studio album.
+          Released in June 2017, the album received multiple Grammy nominations
+          and showcased SZA's vulnerability and honesty. Hits like "Love Galore"
+          and "The Weekend" solidified her status as a formidable force in
+          contemporary R&B. 4. Collaborations: "All the Stars" with Kendrick
+          Lamar SZA's collaborative efforts extended beyond her solo work. Her
+          collaboration with Kendrick Lamar on "All the Stars," featured in the
+          "Black Panther" soundtrack, garnered widespread acclaim and reinforced
+          her ability to seamlessly blend her style with diverse musical
+          landscapes. 5. "Good Days" (Single) - Released: December 2020 "Good
+          Days," released in December 2020, is one of SZA's solo singles that
+          further amplified her impact on the music scene. The song, known for
+          its soulful sound and introspective lyrics, resonated with a wide
+          audience, reaffirming SZA's prowess as a solo artist. As we traverse
+          the chapters of SZA's musical evolution, it becomes clear that her
+          artistry transcends boundaries. Her ability to weave intricate stories
+          through melodies and lyrics has left an indelible mark on the genre,
+          making SZA a revered figure in the landscape of contemporary R&B. With
+          each release, SZA invites listeners into her world, where
+          vulnerability is strength, and music is a medium for self-discovery.
+        </h3>
+      </div>
     </h2>
+    <a href="index.html" class="a-link">Back to homepage</a>
   </body>
 </html>
