made the website seo friendly

--- a/albums.html
+++ b/albums.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="About Sza, Tems and H.e.r.'s albums, including singles"
+      content="About Sza, Tems, and H.e.r.'s craft with spotify links"
+    />
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
-    <title>Albums</title>
+    <title>Albums - music.com</title>
   </head>
   <body>
     <a href="mailto:your.email@example.com" class="contact">Email us 📧</a>
@@ -17,7 +20,7 @@
         >
           <img
             src="https://i.scdn.co/image/ab6761610000e5eb7b05445e212ac49d9ed4c310"
-            alt="Spotify"
+            alt="H.e.r.'s Spotify"
           />
         </a>
 
@@ -61,7 +64,7 @@
         >
           <img
             src="https://i.scdn.co/image/ab67616d00001e020ab4d3e1c0b5c5e453287a4c"
-            alt="Spotify"
+            alt="Tem's Spotify"
           />
         </a>
         Tems
@@ -103,7 +106,7 @@
         >
           <img
             src="https://i.scdn.co/image/ab6761610000e5eb0895066d172e1f51f520bc65"
-            alt="Spotify"
+            alt="Sza's Spotify"
           />
         </a>
         Sza
