--- a/artists.html
+++ b/artists.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About the Artists</title>
+    <meta
+      name="A summary of Sza, Tems, and H.e.r.'s past"
+      content="Introducing Sza, Tems, and H.e.r."
+    />
+    <title>About the Artists - music.com</title>
   </head>
   <body class="artist-1">
     <h1 class="h1-artists">About the Artists</h1>
@@ -12,15 +15,15 @@
       <div class="container">
         <img
           src="https://meetinmontauk.files.wordpress.com/2018/02/her.jpg"
-          alt="Headshot of H.E.R."
+          alt="Younger photo of H.E.R."
         />
         <img
           src="https://1.bp.blogspot.com/-IZ7E4wSX-90/Xt2ApTh4cQI/AAAAAAAAB1o/XCRxR4beiMIC84XwBEzEV4OmkKPu7AXNQCLcBGAsYHQ/s640/blog.jpg"
-          alt="Tems"
+          alt="Younger photo of Tems"
         />
         <img
           src="https://coveteur.com/media-library/image.jpg?id=25297133&width=744&quality=90"
-          alt="Sza"
+          alt="Younger photo of Sza"
         />
       </div>
       <div class="container-main">
