made improvements to the title to make it even more seo friendly

--- a/accomplishments.html
+++ b/accomplishments.html
@@ -7,7 +7,9 @@
       name="Awards and accomplishments of R&B legends Sza, Tems, and H.e.r."
       content="All od Sza, Tems, and H.e.r.'s musical awards and accomplishments up until 2023"
     />
-    <title>Awards and Accomplishments - music.com</title>
+    <title>
+      Awards and Accomplishments of artists Sza, Tems, and H.e.r. - music.com
+    </title>
   </head>
 
   <body>
