--- a/artists.html
+++ b/artists.html
@@ -7,7 +7,7 @@
       name="A summary of Sza, Tems, and H.e.r.'s past"
       content="Introducing Sza, Tems, and H.e.r."
     />
-    <title>About the Artists - music.com</title>
+    <title>About the Artists Sza, Tems, and H.e.r. - music.com</title>
   </head>
   <body class="artist-1">
     <h1 class="h1-artists">About the Artists</h1>
