--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="A deep dive into the musical preogession of three R&B legends known as Sza, Tems, and H.e.r."
       content="How R&B legends Sza, Tems, and H.e.r. came to be"
     />
-    <title>R&B Legends - music.com</title>
+    <title>Discography of R&B Legends Sza, Tems, and H.e.r. - music.com</title>
   </head>
   <body>
     <h1>R&B LEGENDS</h1>
