--- a/albums.html
+++ b/albums.html
@@ -7,7 +7,10 @@
       content="About Sza, Tems, and H.e.r.'s craft with spotify links"
     />
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
-    <title>Albums - music.com</title>
+    <title>
+      Exploring R&B legends Sza, Tems, and H.e.r.'s albums up until 2023 -
+      music.com
+    </title>
   </head>
   <body>
     <a href="mailto:your.email@example.com" class="contact">Email us 📧</a>
