made changes to the links to make them seo friendly

--- a/artists.html
+++ b/artists.html
@@ -68,6 +68,6 @@
         </div>
       </div>
     </h2>
-    <a href="index.html" class="a-link">Back to homepage</a>
+    <a href="index.html" title="homepage" class="a-link">Back to homepage</a>
   </body>
 </html>
