--- a/albums.html
+++ b/albums.html
@@ -13,7 +13,12 @@
     </title>
   </head>
   <body>
-    <a href="mailto:your.email@example.com" class="contact">Email us 📧</a>
+    <a
+      href="mailto:your.email@example.com"
+      title="contact us by Email"
+      class="contact"
+      >Email us 📧</a
+    >
     <h1>Albums</h1>
     <h2>
       <div class="spotify-link">
@@ -148,6 +153,6 @@
         </h3>
       </div>
     </h2>
-    <a href="index.html" class="a-link">Back to homepage</a>
+    <a href="index.html" title="homepage" class="a-link">Back to homepage</a>
   </body>
 </html>
